--- a/public/map/index.html
+++ b/public/map/index.html
@@ -17,12 +17,24 @@
 			
 			<div class="separator s1"></div>
 			
-			<div class="imp" style="background-color: #50FF50">1</div>
+			<div class="imp" style="background-color: #90FF90">1</div>
 			<div class="imp" style="background-color: #FFFF50">2</div>
+			<div class="imp" style="background-color: #FFA050">3</div>
+			<div class="imp" style="background-color: #FF70FF">4</div>
+			<div class="imp" style="background-color: #FF5050">5</div>
+			
+			<div class="pot w" style="background-color: #804c37">DH 6</div>
+			<div class="pot b" style="background-color: #77cb4d">CH 5</div>
+			<div class="pot w" style="background-color: #379ee6">CH 9</div>
+			<div class="pot w" style="background-color: #e39c2e">CH 15</div>
+			<div class="pot w" style="background-color: #6d5fae">CH 30</div>
+			<div class="pot b" style="background-color: #3fb7ad">CH 200</div>
+			<div class="pot w" style="background-color: #34938c">1 MK</div>
+			<div class="pot b" style="background-color: #68c6c5">10 MK</div>
+	
 			
 			<div class="separator s2"></div>
 			
-			<input type="text" class='updateStyle' data-mm-target-property='background'></input>
 			
 		</div>
 		
