--- a/public/map/index.html
+++ b/public/map/index.html
@@ -1,6 +1,7 @@
 <html>
 	<head>
-		<meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1">
+		<meta charset="utf-8"/>
+		<meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1" />
 		<link rel="stylesheet" type="text/css" href="/css/mapjs-default-styles.css"></link>
 	</head>
 	<body>
@@ -35,9 +36,10 @@
 			
 			<div class="separator s2"></div>
 			
+			<input class="date" id="context-menu-date" value=""/>
 			
 		</div>
-		
+	
 		
 		<div id="container" class="mapjs-container loader">
 		</div>
