--- a/public/map/index.html
+++ b/public/map/index.html
@@ -5,7 +5,16 @@
 		<link rel="stylesheet" type="text/css" href="/css/mapjs-default-styles.css"></link>
 	</head>
 	<body>
-
+		<div class="doctor-panel">
+			<div class="patient_search"><input type="text" placeholder="Search for a patient"/></div>
+			<div class="patient_name">Piotr Podstawski</div>
+			<div class="patient_age">male 46</div>
+			<div class="patient_history"><ul>
+				<li>bla bla bla bla bla bla bla bla bla bla bla </li>
+				<li>bla bla bla bla </li>
+				<li>bla bla bla bla bla bla bla bla bla </li>
+			</ul></div>
+		</div>
 		<div id="context-menu" class="mapjs-context-menu">
 			<div class="icon addSubIdea"></div>
 			<div class="icon editNode"></div>
