--- a/public/map/index.html
+++ b/public/map/index.html
@@ -6,7 +6,7 @@
 	</head>
 	<body>
 		<div class="doctor-panel">
-			<div class="patient_search"><input type="text" placeholder="Search for a patient"/></div>
+			<div class="patient_search"><input type="text" class="translate" placeholder="Search for a patient"/></div>
 			<div class="patient_name">Piotr Podstawski</div>
 			<div class="patient_age">male 46</div>
 			<div class="patient_history"><ul>
@@ -16,16 +16,16 @@
 			</ul></div>
 		</div>
 		<div id="context-menu" class="mapjs-context-menu">
-			<div class="icon addSubIdea"></div>
-			<div class="icon editNode"></div>
-			<div class="icon insertRoot"></div>
+			<div class="icon addSubIdea translate" title="Add an idea"></div>
+			<div class="icon editNode translate" title="Edit this idea"></div>
+			<div class="icon insertRoot translate" title="Add a remedy"></div>
 			<!--
 			<div class="icon copy"></div>
 			<div class="icon paste"></div>
 			-->
-			<div class="icon removeSubIdea"></div>
-			<div class="icon undo"></div>
-			<div class="icon redo"></div>
+			<div class="icon removeSubIdea translate" title="Remove"></div>
+			<div class="icon undo translate" title="Undo"></div>
+			<div class="icon redo translate" title="Redo"></div>
 			
 			<div class="separator s1"></div>
 			
