--- a/public/map/index.html
+++ b/public/map/index.html
@@ -2,14 +2,14 @@
 	<head>
 		<meta charset="utf-8"/>
 		<meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1" />
-		<link rel="stylesheet" type="text/css" href="/css/mapjs-default-styles.css"></link>
+		<link rel="stylesheet" type="text/css" href="/css/mapjs.css"></link>
 	</head>
 	<body>
 		<div class="doctor-panel">
-			<div class="patient_search"><input type="text" class="translate" placeholder="Search for a patient"/></div>
+			<div class="patient_search visible"><input type="text" class="translate" placeholder="Search a patient"/></div>
 			<div class="patient_name">Piotr Podstawski</div>
 			<div class="patient_age">male 46</div>
-			<div class="patient_history"><ul>
+			<div class="patient_history visible"><ul>
 				<li>bla bla bla bla bla bla bla bla bla bla bla </li>
 				<li>bla bla bla bla </li>
 				<li>bla bla bla bla bla bla bla bla bla </li>
