--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
 				</div>
 			</div>
 			<div class="footer">
-				<a class="signup translate">Sign up</a>
+				<a class="signup translate" href="/signup/">Sign up</a>
 				<a class="forgottenpassword translate">Forgot password?</a>
 			</div>
 		</div>
