--- a/public/signup/index.html
+++ b/public/signup/index.html
@@ -13,14 +13,14 @@
 			<div class="body">
 				<div class="signup">
 					<input class="email text translate" placeholder="your email"/>
-					<input class="password text translate" placeholder="new password"/>
-					<input class="password2 text translate" placeholder="retype password"/>
+					<input class="password text translate" type="password" placeholder="new password"/>
+					<input class="password2 text translate" type="password" placeholder="retype password"/>
 					<div class="homeopath">
 						<input type="checkbox" id="homeopath"/>
 						<label for="homeopath" class="checkbox"></label>
 						<label for="homeopath" class="translate">I am a homeopath</label>
 					</div>
-					<button class="signin translate">Sign up</button>
+					<button class="signup translate">Sign up</button>
 				</div>
 				
 			</div>
