--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 		<meta charset="utf-8"/>
 		<title>Login</title>
 		<meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1">
-		<link rel="stylesheet" type="text/css" href="css/style.css"></link>
+		<link rel="stylesheet" type="text/css" href="/css/style.css"></link>
 	</head>
 	<body class="login">
 		<div class="login-panel">
@@ -13,7 +13,7 @@
 			<div class="body">
 				<div class="login">
 					<input class="email translate" placeholder="your email"/>
-					<input class="password translate" placeholder="your password"/>
+					<input class="password translate" type="password" placeholder="your password"/>
 					<button class="signin translate">Sign in</button>
 				</div>
 				<div class="forgottenpassword">
@@ -25,6 +25,6 @@
 			</div>
 		</div>
 	
-		<script src="site/main.js"></script>
+		<script src="/site/main.js"></script>
 	</body>
 </html>
