--- a/public/doctor/index.html
+++ b/public/doctor/index.html
@@ -9,6 +9,7 @@
 		<table class="patients"></table>
 		
 		<div class="plus translate" title="Add a patient"></div>
+		<div class="logout translate" title="Logout"></div>
 		
 		<script src="/site/main.js"></script>
 	</body>
