--- a/public/map/index.html
+++ b/public/map/index.html
@@ -7,13 +7,9 @@
 	<body>
 		<div class="doctor-panel">
 			<div class="patient_search visible"><input type="text" class="translate" placeholder="Search a patient"/></div>
-			<div class="patient_name">Piotr Podstawski</div>
-			<div class="patient_age">male 46</div>
-			<div class="patient_history visible"><ul>
-				<li>bla bla bla bla bla bla bla bla bla bla bla </li>
-				<li>bla bla bla bla </li>
-				<li>bla bla bla bla bla bla bla bla bla </li>
-			</ul></div>
+			<div class="patient_name"></div>
+			<div class="patient_age"></div>
+			<div class="patient_history visible"></div>
 		</div>
 		<div id="context-menu" class="mapjs-context-menu">
 			<div class="icon addSubIdea translate" title="Add an idea"></div>
