--- a/public/map/index.html
+++ b/public/map/index.html
@@ -10,6 +10,7 @@
 			<div class="patient_name"></div>
 			<div class="patient_age"></div>
 			<div class="patient_history visible"></div>
+			<div class="doctor"><a href="/doctor/"></a></div>
 		</div>
 		<div id="context-menu" class="mapjs-context-menu">
 			<div class="icon addSubIdea translate" title="Add an idea"></div>
