--- a/public/signup/index.html
+++ b/public/signup/index.html
@@ -25,7 +25,7 @@
 				
 			</div>
 			<div class="footer">
-				<a class="signin translate" href="/s">Sign in</a>
+				<a class="signin translate" href="/">Sign in</a>
 			</div>
 		</div>
 	
