--- a/src/mailer/adduser.html
+++ b/src/mailer/adduser.html
@@ -1,7 +1,7 @@
 <div style="border:2px solid #13be02; width:99%; height:auto; display:block; margin-right:2px">
     
     <div style="display:block; border:none; margin:0 auto; clear:both; padding:0px;">
-        <a href="http://h.webkameleon.com/">
+        <a href="[options.root]/">
             <img border="0" src="https://lh3.googleusercontent.com/kSqO5JHCapuAgvRLxjZHh1piSk3Wp32tPBurz4oKdg0Y1ft7aWrxFa4kiYa2AxcMRwJsdvXJpc6C7RtMZcShSRBpJ4a7RdaChA=w1366-h768-rw-no" width="100%" />
         </a>
     </div>
@@ -14,7 +14,7 @@
             To finish the registration process, please click the following link:
         </p>
 
-        <p><a href="http://h.webkameleon.com/signupcode/[hash]-[id]" style="color: #13be02; font-size:1.5em; font-weight:bold; cursor:pointer;">http://h.webkameleon.com/signupcode/[hash]-[id]</a></p>
+        <p><a href="[options.root]/signupcode/[hash]-[id]" style="color: #13be02; font-size:1.5em; font-weight:bold; cursor:pointer;">[options.root]/signupcode/[hash]-[id]</a></p>
     </div>
 
 
