--- a/src/mailer/share_pl.html
+++ b/src/mailer/share_pl.html
@@ -7,14 +7,14 @@
     </div>
 
     <div style="font-family: Arial; padding:25px;">
-        <div style="font-size:2em; font-weight:bold;">Witaj w systemie Homeopatica</div>
+        <div style="font-size:2em; font-weight:bold;">[me.email] udostępnia dane pacjenta</div>
 
         <p style="font-size: 1.25em;">
-            Właśnie się zapisałeś(aś) do naszego systemu kolaboracji homeopatycznej.
-            W celu dokończenia procesu rejestracji proszę kliknąć w poniższy link:
+            W naszym systemie kolaboracji homeopatycznej zostały udostępnione dane
+            pacjenta <b>[patient.name]</b>:
         </p>
 
-        <p><a href="[options.root]/signupcode/[hash]-[id]" style="color: #13be02; font-size:1.5em; font-weight:bold; cursor:pointer;">[options.root]/signupcode/[hash]-[id]</a></p>
+        <p><a href="[options.root]/" style="color: #13be02; font-size:1.5em; font-weight:bold; cursor:pointer;">zaloguj się aby sprawdzić</a></p>
     </div>
 
 
