--- a/src/mailer/share.html
+++ b/src/mailer/share.html
@@ -7,14 +7,14 @@
     </div>
 
     <div style="font-family: Arial; padding:25px;">
-        <div style="font-size:2em; font-weight:bold;">Witaj w systemie Homeopatica</div>
+        <div style="font-size:2em; font-weight:bold;">[me.email] shares patient's data with you</div>
 
         <p style="font-size: 1.25em;">
-            Właśnie się zapisałeś(aś) do naszego systemu kolaboracji homeopatycznej.
-            W celu dokończenia procesu rejestracji proszę kliknąć w poniższy link:
+            In our homeopathic collaboration system there is <b>[patient.name]'s</b> data
+            waiting for you to comment:
         </p>
 
-        <p><a href="[options.root]/signupcode/[hash]-[id]" style="color: #13be02; font-size:1.5em; font-weight:bold; cursor:pointer;">[options.root]/signupcode/[hash]-[id]</a></p>
+        <p><a href="[options.root]/" style="color: #13be02; font-size:1.5em; font-weight:bold; cursor:pointer;">Please login and check</a></p>
     </div>
 
 
