--- a/public/doctor/index.html
+++ b/public/doctor/index.html
@@ -10,6 +10,10 @@
 		
 		<div class="plus translate" title="Add a patient"></div>
 		<div class="logout translate" title="Logout"></div>
+		<div class="save translate" title="Save patient names"></div>
+		
+		<input type="file" id="file-input" />
+		<label for="file-input" class="open translate" title="Open patient names"></label>
 		
 		<script src="/site/main.js"></script>
 	</body>
