--- a/public/doctor/index.html
+++ b/public/doctor/index.html
@@ -12,7 +12,7 @@
 		<div class="logout translate" title="Logout"></div>
 		<div class="save translate" title="Save patient names"></div>
 		
-		<input type="file" id="file-input" />
+		<input type="file" id="file-input" accept=".txt"/>
 		<label for="file-input" class="open translate" title="Open patient names"></label>
 		
 		<script src="/site/main.js"></script>
