--- a/public/doctor/index.html
+++ b/public/doctor/index.html
@@ -15,6 +15,7 @@
 		<input type="file" id="file-input" accept=".txt"/>
 		<label for="file-input" class="open translate" title="Open patient names"></label>
 		
+		<div class="sharer"></div>
 		<script src="/site/main.js"></script>
 	</body>
 </html>
